yuuvisvapi/ingress/templates-unused/auth-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    kubernetes.io/ingress.class: nginx
  name: auth-service-ingress
  namespace: yuuvis
spec:
  rules:
  - host: momentum.osvh.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: authentication
          servicePort: 80
  tls:
  - hosts:
    - momentum.osvh.de
    secretName: momentum-osvh-cert
